Do not catch mouse click in concept browser layover elements, fixed context menu z-index

--- a/assets/css/conceptBrowser/conceptBrowser.scss
+++ b/assets/css/conceptBrowser/conceptBrowser.scss
@@ -1,6 +1,15 @@
 #concept-browser-controls, #concept-browser-controls-bottom {
   z-index: 85;
   position: absolute;
+  pointer-events: none;
+
+  div {
+    pointer-events: none;
+  }
+
+  button, input, ul, li {
+    pointer-events: all;
+  }
 
   .search-container, .action-container {
     width: 40%;
@@ -22,4 +31,8 @@
   width: 100%;
   height: 100%;
   z-index: 10;
+}
+
+#context-menu-layer, .context-menu-list, .context-menu-root {
+  z-index: 100 !important;
 }
